# dtc-ml-capstone

./: LICENSE  main.py  pyproject.toml
notebooks/: 01_eda.ipynb
